syntax = "proto3";

package media;

option go_package = "example.com/proto/media";

service MediaHandler {
    rpc StoreImage (stream StoreImageRequest) returns (ImageResponse) {}
}

message StoreImageRequest {
    reserved 1;
    bytes data = 2;
    string fileName = 3;
}

message ImageResponse {
    string fileId = 1;
}